[package]
name = "dom_rss"
version = "0.1.0"
authors = ["Michał Sidor <public+git@meekchopp.es>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = "0.4"
dom_api = { path = "../dom_api" }
feed-rs = "0.6"
minreq = { version = "2.4.2", default-features = false, features = ["https-rustls"] }
